--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -8,7 +8,6 @@ on:
     branches: [ main ]
     paths:
       - 'scraper.py'
-      - 'generar_noticia.py' # Agregamos esto para que se active si cambias el script de IA
       - 'login/**'
 
 jobs:
@@ -58,7 +57,7 @@ jobs:
     - name: Ejecutar scraper
       run: |
         echo "🚀 Ejecutando scraper en modo headless..."
-        python 2do_plano.py
+        python scraper.py
       env:
         DISPLAY: ":99"
         
